# brave

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  brave.ccs  brave.cfg  libdragonbones.vcxproj  libdragonbones.vcxproj.bak  libdragonbones.vcxproj.filters  note.txt
Classes/: AllHeaders.h  AppDelegate.cpp  AppDelegate.h  BaseHeaders.h  BaseLayer.h  BaseNode.cpp  BaseNode.cpp.bak  BaseNode.h  HelloWorldScene.cpp  JsonUtil.cpp  JsonUtil.h  MainClass.cpp  MainClass.h  ReplaceAnimation.h
Classes/animation/: Hint.h  MovieClip.h
Classes/base/: AllHeaders.h  AudioUtil.cpp  AudioUtil.h  BaseHeaders.h  BaseNode.cpp  BaseNode.h  DbPreload.cpp  DbPreload.h  DefineClasses.h  FileUtil.cpp  FileUtil.h  Indexes.cpp  Indexes.h  JsonUtil.cpp  JsonUtil.h  MYPThread.cpp  PThread.cpp  PThread.h  mc.cpp  mc.h
Classes/bezier/: Bezier.cpp  Bezier.h  FitLine.cpp  FitLine.h  Path.cpp  Path.h  PathPoint.h  PathSegment.cpp  PathSegment.h  Pointer.cpp  Pointer.h
Classes/common/: ArgsParse.cpp  ArgsParse.h  Array.h  BTree.hpp  CalcExp.h  Common.h  Connection.h  Convert.h  DataTable.h  DateTime.h  DateTimeFun.h  DateTimer.h  Decoding.cpp  Decoding.h  DirectoryInfo.cpp  DirectoryInfo.hpp  Encoding.cpp  Encoding.h  Enums.h  Eval.h  Exception.h  ExpEval.h  ExpEval.hpp  FTP.cpp  FTP.h  FileInfo.hpp  Functions.cpp  Functions.h  HashTable.hpp  HashTable2.hpp  IPAddress.h  Log.cpp  Log.h  MYPlatform.h  MYSocket.cpp  MYSocket.h  MYString.cpp  MulHashTable.hpp  MulHashTable2.hpp  NetConstDefine.cpp  (+19 more)
Classes/dragonbones/cocos2d/: DBCCSlot.h  (+7 more)
Classes/engine/: BonusMoney.as  BonusMoney.cpp  BonusMoney.h  CallDelay.as  CallDelay.cpp  CallDelay.h  CastSphere.as  CastSphere.cpp  CastSphere.h  DeathEffect.as  Education.as  Feature.cpp  Feature.h  GetSphere.as  GetSphere.cpp  GetSphere.h  InTimer.as  InTimer.cpp  InTimer.h  Indexes.as  MoneyAdd.cpp  MoneyAdd.h  SavedCastTime.cpp  SavedCastTime.h  Testing.as  Waves.cpp  Waves.h  World.cpp  World.h  WorldInterface.cpp  WorldInterface.h  WorldInterface_mc.cpp  WorldInterface_mc.cpp.bak  WorldInterface_mc.h  WorldInterface_mc.h.bak
Classes/screens/: Achievements.as  Achievements.cpp  Achievements.h  Credits.as  Credits.cpp  Credits.h  Defeat.as  Defeat.cpp  Defeat.h  DifficultyLevel.as  DifficultyLevel.cpp  DifficultyLevel.h  Encyclopedia.as  Encyclopedia.cpp  Encyclopedia.h  FastPause.as  FastPause.cpp  FastPause.h  LevelsMenu.cpp  LevelsMenu.h  LoginOrRegister.as  MiddleScreen.cpp  MiddleScreen.h  OpenLevel.cpp  OpenLevel.h  PauseMenu.as  PauseMenu.cpp  PauseMenu.h  PreVictory.as  PreVictory.cpp  PreVictory.h  Screen.cpp  Screen.h  StartLogo.as  StartLogo.cpp  StartLogo.h  StartMenu.as  StartMenu.cpp  StartMenu.h  Upgrades.as  (+5 more)
Classes/sys/: I18n.cpp  I18n.h  bezierBox.cpp  bezierBox.cpp.bak  bezierBox.h  preloadSound.cpp  preloadSound.h  saveBox.cpp  saveBox.h
Classes/test/: AnimationBase.h  AppDelegate.cpp  BaseDemo.h  CoreElement.cpp  CoreElement.h  DBComSubTest.h  DBComTest.h  DragonBonesEvent.h  HelloDragonBones.h  HelloWorldScene.cpp  HelloWorldScene.h  MaskTest.h  ReplaceAnimation.h  WorldInterface.h
Classes/training/: Training.cpp  Training.h  Training_1.as  Training_1.cpp  Training_1.h  Training_10.as  Training_11.as  Training_11.cpp  Training_11.h  Training_12.as  Training_12.cpp  Training_12.h  Training_2.as  Training_2.cpp  Training_2.h  Training_3.as  Training_3.cpp  Training_3.h  Training_4.as  Training_4.cpp  Training_4.h  Training_5.as  Training_5.cpp  Training_5.h  Training_6.as  Training_6.cpp  Training_6.h  Training_7.as  Training_7.cpp  Training_7.h  Training_8.as  Training_8.cpp  Training_8.h  Training_9.as  Training_9.cpp  Training_9.h  Training_91.as  Training_91.cpp  Training_91.h  Training_92.as  (+2 more)
Resources/: mc.xlsm  mc.xlsx  t.txt  素材说明.xlsx
Resources/bak/: level1.csb  worldinterface.csb
Resources/buffspeed/: skeleton.xml  texture.xml
Resources/dust1/: skeleton.xml
Resources/dust2/: texture.xml
Resources/dust3/: skeleton.xml
Resources/fla/: .actionScriptProperties  Achievements_mc.fla  Air_mc.fla  AnimUpgrade_mc.fla  Arrow_mc.fla  AuthortimeSharedAssets.fla  BlowIce_mc.fla  BonusMoney_mc.fla  BuildTowerMenu_mc.fla  BuildTowerSmoke_mc.fla  BulletFireTower_mc.fla  BulletIceTower_mc.fla  BulletLevinTower_mc.fla  BulletSphereTower_mc.fla  BulletStoneTower_mc.fla  BulletTower51_1_mc.fla  BulletTower51_2_mc.fla  BulletTower5_1Bang_mc.fla  BulletTower5_1Smoke1_mc.fla  BulletTower5_1_mc.fla  BulletTower61_mc.fla  BulletTower6_1_mc.fla  BulletTower6_2_mc.fla  BulletTower71_mc.fla  BulletTower7_mc.fla  BulletTower7_smoke_mc.fla  BulletTower81_mc.fla  BulletTower8_1_mc.fla  BulletTower8_2_mc.fla  CastFireIce_mc.fla  CastFireLevin_mc.fla  CastFireStone_mc.fla  CastFire_mc.fla  CastGetAllLittle_mc.fla  CastGetAllSwamp_mc.fla  CastGetAll_mc.fla  CastIceLevin_mc.fla  CastIceStone_mc.fla  CastIce_mc.fla  CastLevin_mc.fla  (+164 more)
Resources/icedeath/: skeleton.xml  texture.xml
Resources/iceeffect/: skeleton.xml  texture.xml
Resources/icefreeze/: skeleton.xml
Resources/levinattack/: texture.xml
Resources/res/: level1.csb  level1.json  worldinterface.csb  worldinterface.json
Resources/stonedeath/: texture.xml
Resources/xml/: base.xml  base.xml.bak
brave_test/: test.rar
brave_test/proj.win32/: brave_test.sln  brave_test.vcxproj  brave_test.vcxproj.filters  main.cpp
cocosstudio/: level1.csd  worldinterface.csd
proj.android/: .cproject  .gitignore  .project  AndroidManifest.xml  build.xml  gradle.properties  settings.gradle
proj.android-studio/: .gitignore  build.gradle  gradle.properties  settings.gradle
proj.android-studio/app/: Android.mk  AndroidManifest.xml  CMakeLists.txt  build.gradle  local.properties  proguard-rules.pro
proj.android-studio/key/: brave.jks
proj.android/app/: build.gradle  readme.txt
proj.android/key/: brave.jks
proj.win32/: brave.sln  brave.vcxproj  brave.vcxproj.filters  main.cpp
test/: DragonBonesDesignPanel-2.2.2.rar  DragonBonesDesignPanel-3.0.1.rar  main.cpp  test.vcxproj  test.vcxproj.filters
test/Cyborg/: skeleton.xml  texture.xml
test/armOutSide/: skeleton.xml  texture.xml
(+1247 files in other folders)
